--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <title>Dead Jokes</title>
 </head>
 <body>
-    <!-- <img id="img1" src="deadJ.png" alt=""> -->
+    <!-- <img src="deadJ.png" alt=""> -->
     <p id="jokeElement">Loading...</p>
     <script src="script.js"></script>
 </body>
